--- a/notebooks/main_test.ipynb
+++ b/notebooks/main_test.ipynb
@@ -31,8 +31,9 @@
       "Seeding random, torch, numpy.\n",
       "Note that due to parallel processing results will be similar but not identical. Use only one process and set --deterministic_execution to True if you want identical results. (Not recommended; will slow code down and might not be possible with A2C). \n",
       "Training beginning\n",
-      "Number of updates:  1\n",
-      "Iter:  0\n"
+      "Number of updates:  2\n",
+      "Iter:  0\n",
+      "Iter:  1\n"
      ]
     }
    ],
@@ -41,13 +42,18 @@
     "import sys\n",
     "\n",
     "sys.argv = ['pass',\n",
-    "            '--exp_label', 'coinrun_ppo',\n",
+    "            '--exp_label', 'maze_ppo',\n",
+    "            '--train_start_level', '0',\n",
+    "            '--train_num_levels', '200',\n",
+    "            '--test_num_levels', '200',            \n",
+    "            '--seed', '0',\n",
+    "            '--test', 'false',\n",
+    "            '--eval_interval', '1',\n",
     "            '--log', 'false',\n",
     "            '--num_frames', '2048', \n",
-    "            '--num_processes', '8',\n",
-    "            '--eval_interval', '1',\n",
-    "            '--group_name', 'dummy_run',\n",
-    "            '--recurrent_policy', 'true']\n",
+    "            '--num_processes', '4',\n",
+    "            '--proj_name', 'prototype_ucl_msc_proj',\n",
+    "            '--group_name', 'dummy_run']\n",
     "main.main()"
    ]
   },
@@ -61,9 +67,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:ucl_msc_proj]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ucl_msc_proj-py"
   },
   "language_info": {
    "codemirror_mode": {
