single gaussian distribution matching

--- a/notebooks/envs_test.ipynb
+++ b/notebooks/envs_test.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -22,11 +13,11 @@
     "import random\n",
     "\n",
     "from baselines import bench\n",
-    "from baselines.common.vec_env import VecEnvWrapper\n",
     "from baselines.common.vec_env.dummy_vec_env import DummyVecEnv\n",
     "from baselines.common.vec_env.shmem_vec_env import ShmemVecEnv\n",
     "from baselines.common.vec_env.subproc_vec_env import SubprocVecEnv\n",
-    "from baselines.common.vec_env.vec_normalize import VecNormalize"
+    "\n",
+    "from baselines.common.vec_env import VecEnvWrapper, VecExtractDictObs, VecMonitor, VecNormalize"
    ]
   },
   {
@@ -38,7 +29,6 @@
     "seed=0\n",
     "random.seed(seed)\n",
     "torch.manual_seed(seed)\n",
-    "torch.random.manual_seed(seed)\n",
     "np.random.seed(seed)"
    ]
   },
@@ -48,11 +38,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import datetime\n",
-    "# now = datetime.datetime.now().strftime('_%d:%m_%H:%M:%S')\n",
-    "# import wandb\n",
-    "# wandb.init(name='rl_env_test'+now, \n",
-    "#            project='ucl_msc_proj')"
+    "class VecTransposeImage(VecEnvWrapper):\n",
+    "    \"\"\"\n",
+    "    Based on: https://github.com/DLR-RM/stable-baselines3\n",
+    "    Re-order channels, from (H,W,C) to (C,H,W).\n",
+    "    It is required for PyTorch convolution layers.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, venv):\n",
+    "        height, width, channels = venv.observation_space.shape\n",
+    "        observation_space = Box(low=0, \n",
+    "                                high=255,\n",
+    "                                shape=(channels, height, width),\n",
+    "                                dtype=venv.observation_space.dtype)\n",
+    "        super(VecTransposeImage, self).__init__(venv, observation_space=observation_space)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def transpose_image(image):\n",
+    "        \"\"\"\n",
+    "        Transpose an image or batch of images (re-order channels).\n",
+    "        :param image: (np.ndarray)\n",
+    "        :return: (np.ndarray)\n",
+    "        \"\"\"\n",
+    "        if len(image.shape) == 3:\n",
+    "            return np.transpose(image, (2, 0, 1))\n",
+    "        return np.transpose(image, (0, 3, 1, 2))\n",
+    "\n",
+    "    def step_wait(self):\n",
+    "        observations, rewards, dones, infos = self.venv.step_wait()\n",
+    "        return self.transpose_image(observations), rewards, dones, infos\n",
+    "\n",
+    "    def reset(self):\n",
+    "        \"\"\"\n",
+    "        Reset all environments\n",
+    "        \"\"\"\n",
+    "        return self.transpose_image(self.venv.reset())\n",
+    "\n",
+    "    def close(self):\n",
+    "        self.venv.close()       "
    ]
   },
   {
@@ -61,63 +84,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TransposeImage(gym.ObservationWrapper):\n",
-    "    def __init__(self, env=None):\n",
-    "        super(TransposeImage, self).__init__(env)\n",
-    "        obs_shape = self.observation_space.shape\n",
-    "        self.observation_space = Box(self.observation_space.low[0, 0, 0],\n",
-    "                                     self.observation_space.high[0, 0, 0],\n",
-    "                                     [obs_shape[2], obs_shape[1], obs_shape[0]],\n",
-    "                                     dtype=self.observation_space.dtype)\n",
-    "\n",
-    "    def observation(self, observation):\n",
-    "        # Observation is of type Tensor\n",
-    "        return observation.transpose(2, 0, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class VecPyTorch(VecEnvWrapper):\n",
     "    def __init__(self, venv, device):\n",
     "        \"\"\"\n",
-    "        Converts array of observations to Tensors. This makes them\n",
-    "        usable as input to a PyTorch policy network.\n",
+    "        Taken from: https://github.com/harry-uglow/Curriculum-Reinforcement-Learning\n",
     "\n",
-    "        Unsure: Return only every `skip`-th frame.        \n",
+    "        Converts array of observations to Tensors. This makes them\n",
+    "        usable as input to a PyTorch policy network.     \n",
     "        \"\"\"\n",
     "        super(VecPyTorch, self).__init__(venv)\n",
     "        self.device = device\n",
     "\n",
     "    def reset(self):\n",
+    "        \"\"\"\n",
+    "        Convert numpy.array observations into torch.tensor for policy network.\n",
+    "        \"\"\"\n",
     "        obs = self.venv.reset()\n",
     "        # convert obs to torch tensor\n",
     "        obs = torch.from_numpy(obs).float().to(self.device)\n",
     "        return obs\n",
     "\n",
     "    def step_async(self, actions):\n",
-    "        actions = actions.squeeze(1).cpu().numpy()\n",
+    "        \"\"\"\n",
+    "        Convert torch.tensor actions into numpy.array for envs.\n",
+    "        \"\"\"\n",
+    "        if isinstance(actions, torch.LongTensor) or len(actions.shape) > 1:\n",
+    "            # Squeeze the dimension for discrete actions\n",
+    "            actions = actions.squeeze(1)        \n",
+    "        actions = actions.cpu().numpy()\n",
     "        self.venv.step_async(actions)\n",
     "\n",
     "    def step_wait(self):\n",
+    "        \"\"\"\n",
+    "        Convert numpy.array observations into torch.tensor for policy network.\n",
+    "        Convert numpy.array rewards into torch.tensor for policy network.\n",
+    "        \"\"\"      \n",
     "        obs, reward, done, info = self.venv.step_wait()\n",
     "        # convert obs to torch tensor\n",
     "        obs = torch.from_numpy(obs).float().to(self.device)\n",
     "        # convert reward to torch tensor\n",
     "        reward = torch.from_numpy(reward).unsqueeze(dim=1).float()\n",
-    "        return obs, reward, done, info      "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_seeds=np.arange(0,100)"
+    "        return obs, reward, done, info    "
    ]
   },
   {
@@ -126,40 +133,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_env(env_id,rank):  \n",
+    "def make_env(env_id, rank):  \n",
     "\n",
     "    def _thunk():\n",
     "\n",
     "        if env_id.startswith('procgen'):\n",
     "            env = gym.make(env_id, \n",
-    "                           start_level=100, \n",
+    "                           start_level=0, \n",
     "                           num_levels=100, \n",
-    "                           distribution_mode='easy',\n",
-    "                           rand_seed=int(random.choice(train_seeds)))\n",
+    "                           distribution_mode='easy')\n",
     "        else: \n",
-    "            raise NotImplementedError  \n",
-    "        \n",
-    "\n",
-    "        env = bench.Monitor(env=env, \n",
-    "                            filename=None, \n",
-    "                            allow_early_resets=False)\n",
-    "        \n",
-    "        # If the input has shape (H,W,3), wrap for PyTorch convolutions (3,H,W)\n",
-    "        obs_shape = env.observation_space.shape\n",
-    "        if len(obs_shape) == 3 and obs_shape[2] in [1, 3]:\n",
-    "            env = TransposeImage(env)            \n",
+    "            raise NotImplementedError   \n",
     "        \n",
     "        return env\n",
     "    return _thunk\n",
     "\n",
-    "def make_vec_envs(env_name,num_processes,gamma):\n",
-    "    envs = [make_env(env_id=env_name, \n",
-    "                     rank=i) \n",
-    "            for i in range(num_processes)]\n",
+    "def make_vec_envs(env_name, num_processes):\n",
+    "    envs = [make_env(env_id=env_name, rank=i) for i in range(num_processes)]\n",
+    "    \n",
     "    if len(envs) > 1:\n",
     "        envs = SubprocVecEnv(envs)\n",
     "    else:\n",
-    "        envs = DummyVecEnv(envs)           \n",
+    "        envs = DummyVecEnv(envs)   \n",
+    "\n",
+    "    # re-order channels, (H,W,C) => (C,H,W). \n",
+    "    # required for PyTorch convolution layers.\n",
+    "    envs = VecTransposeImage(envs)    \n",
+    "    \n",
+    "    envs = VecMonitor(venv=envs, \n",
+    "                      filename=None,\n",
+    "                      keep_buf=100)    \n",
+    "        \n",
+    "    # normalise the rewards during training but not during testing\n",
+    "    # we don't normalise the obs as the network does this /255.\n",
+    "    envs = VecNormalize(envs, ob=False)            \n",
+    "\n",
+    "    # wrapper to convert observation arrays to torch.tensors\n",
+    "    envs = VecPyTorch(envs, device)        \n",
     "\n",
     "    return envs"
    ]
@@ -168,50 +178,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/anaconda3/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "env_name = \"procgen:procgen-coinrun-v0\"\n",
     "num_processes = 2\n",
-    "gamma = 0.99\n",
     "\n",
-    "envs = make_vec_envs(env_name,num_processes,gamma)\n",
-    "envs = VecNormalize(envs, ob=False)\n",
-    "envs = VecPyTorch(envs, device)"
+    "envs = make_vec_envs(env_name,num_processes)"
    ]
   },
   {
@@ -231,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(-5700.)"
+       "torch.Size([2, 3, 64, 64])"
       ]
      },
      "execution_count": 10,
@@ -240,22 +216,28 @@
     }
    ],
    "source": [
-    "torch.sum(frame[0]-frame[1])"
+    "frame.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-76908., device='cuda:0')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sum(frame[0]-frame[1])"
+   ]
   },
   {
    "cell_type": "code",
@@ -281,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
